--- a/src/components/first.css
+++ b/src/components/first.css
@@ -1,14 +1,14 @@
 .first {
-  --bg-color-darker:#02131b;
-    --bg-color-dark:#12242c;
-    --hero-text-color: #16c995;
+  --bg-color-darker: #02131b;
+  --bg-color-dark: #12242c;
+  --hero-text-color: #16c995;
   --icon-white: #fff;
   background-image: url("../img/60d4e852a05fb1b7f2c27185_Frame 2.png");
-  
+
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 100vh;
+  min-height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,32 +16,82 @@
   text-align: center;
   /* padding: 0 15%; */
 }
-.sub{
-    width: 85%;
-    margin-bottom: 1%;
+.sub {
+  width: 85%;
+  margin-bottom: 1%;
+}
+.sub-1{
+  padding: 0 20%;
+  margin: 10% auto;
+}
+.sub-1 div:nth-child(2){
+  margin: 2% auto;
+}
+@media (max-width: 768px) {
+  .sub-2 {
+    width: 95%;
+  }
+  .sub-1{
+    padding: 0 10%;
+  }
+}
+@media (max-width: 600px) {
+  .sub-2 {
+    flex-direction: column-reverse;
+  }
+  .sub-2 > div {
+    width: 90% !important;
+    margin-top: 3%;
+  }
+  .heroL{
+    padding: 5% 1%;
+  }
+  .sub-1{
+    padding: 0 3%;
+  }
+  
 }
 .sub h1,
 p {
   color: var(--icon-white);
 }
-.sub-2{
+.sub-2 {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.sub-2 .left{
-  min-width: 40%;
-  max-width: 50%;
+.sub-2 .left {
+  width: 50%;
+  max-width: 810px;
   background-color: var(--bg-color-dark);
   border-radius: 2%;
-  padding: 1% .5%;
+  padding: 1% 0.5%;
 }
-.sub-2 .right{
+.sub-2 .right {
   width: 49%;
-  
+  margin-left: 0.5%;
 }
-.right iframe{
+.right iframe {
   width: 100%;
   min-height: 300px;
   border-radius: 15px;
+  max-height:315px ;
+  max-width: 600px;
+
+}
+.right button{
+  width: 98%;
+  max-width: 600px;
+  min-height: 5.5rem;
+  /* padding: 2rem; */
+  background-image: linear-gradient(133deg, #1bd18e, #01aeae);
+  border-radius: 10px;
+  border: none;
+  font-size: 1.55rem;
+  color: var(--icon-white);
+  margin-top: .85%;
+}
+.right p{
+  font-size: 1.2rem;
+  
 }
