--- a/src/style/eighth.css
+++ b/src/style/eighth.css
@@ -1,7 +1,66 @@
-
-.eighth{
-    text-align: center;
+.eighth {
+  text-align: center;
   max-width: 1020px;
   margin: 1% auto;
   width: 70%;
+  padding: 2% 4%;
+}
+
+.text-block-117 {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 8px;
+  font-family: DM Sans, sans-serif;
+  font-size: 22px;
+}
+
+.green-text-span-3 {
+  color: #29cf84;
+}
+
+.brands-flex {
+  justify-content: space-around;
+  margin-bottom: 26px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+@media (max-width: 1048px) {
+  .eighth {
+    width: 95%;
+  }
+  .brands-flex img {
+    width: 20.1%;
+  }
+}
+.testimonial3 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 1rem;
+  overflow: hidden;
+}
+.vid-test {
+  max-width: 320px;
+  border: none;
+}
+
+@media (max-width: 768px) {
+  .testimonial3 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .testimonial3 iframe {
+    width: 90%;
+    height: 360px; /* Adjust the height as needed */
+  }
+}
+
+.testimonial3 iframe {
+  width: 32%;
+  height: 360px; /* Adjust the height as needed */
 }
